NumberInputWidget: Simplify CSS selectors & fix button text alignment
Simplifying CSS selectors of NumberInputWidget, assigning button styles to
more appropriate `.oo-ui-numberInputWidget-buttoned` selector. Also fixing
button text alignment to be fully centered in MediaWiki theme.

--- a/src/styles/widgets/NumberInputWidget.less
+++ b/src/styles/widgets/NumberInputWidget.less
@@ -4,21 +4,21 @@
 	display: inline-block;
 	position: relative;
 
+	&-buttoned {
+		.oo-ui-buttonWidget,
+		.oo-ui-textInputWidget {
+			display: table-cell;
+		}
+
+		.oo-ui-buttonElement-button {
+			.oo-ui-box-sizing( border-box );
+		}
+	}
+
 	&-field {
 		display: table;
 		table-layout: fixed;
 		width: 100%;
-
-		> .oo-ui-buttonWidget,
-		> .oo-ui-textInputWidget {
-			display: table-cell;
-		}
-
-		> .oo-ui-buttonWidget {
-			> .oo-ui-buttonElement-button {
-				.oo-ui-box-sizing( border-box );
-			}
-		}
 	}
 
 	.theme-oo-ui-numberInputWidget();
